--- a/docs/总文档.md
+++ b/docs/总文档.md
@@ -1,3 +1,14 @@
+<div style="text-align: center; page-break-after: always;">
+    <h1 style="font-size: 32pt; color: #2c5282; margin-top: 100pt;">KernelX 微内核实时操作系统</h1>
+    <h2 style="font-size: 20pt; color: #4a90a4; margin-top: 30pt;">设计文档</h2>
+    <div style="margin-top: 80pt; font-size: 14pt;">
+        <p><strong>参赛队员：</strong></p>
+        <p>张逸轩、刘镇睿、丁宏阳</p>
+        <p><strong>学校：</strong></p>
+        <p>杭州电子科技大学</p>
+    </div>
+
+
 # 高清的 KernelX 文档
 
 ## 目录
