--- a/docs/总文档.md
+++ b/docs/总文档.md
@@ -43,7 +43,6 @@
   - [Drivers](#drivers)
   - [FAL](#fal)
   - [LIBC 组件](#libc-组件)
-  - [C++运行时环境](#c运行时环境)
   - [mprotect](#mprotect)
   - [Legacy](#legacy)
   - [utilities](#utilities)
@@ -1212,7 +1211,7 @@ int pthread_cond_broadcast(pthread_cond_t *cond);
 int pthread_cond_signal(pthread_cond_t *cond);
 ```
 
-#### C++运行时环境
+##### C++运行时环境
 
 C++运行时环境实现了`new`和`delete`等C++运行必须的函数，底层仍然调用了RT-Thread的C接口，例如`new`和`delete`只是对`rt_malloc`和`rt_free`的包装。
 
